@@ -287,6 +287,8 @@ Trunk (unreleased changes)
     HADOOP-5717. Create public enum class for the Framework counters in 
     org.apache.hadoop.mapreduce. (Amareshwari Sriramadasu via sharad)
 
+    HADOOP-5217. Split AllTestDriver for core, hdfs and mapred. (sharad)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
